@@ -16,6 +16,7 @@
     * FIX: Logwatch: Changed font color back to black
     * FIX: show toggle button for checkboxes in deactivated state
     * FIX: fix repeated stacked refresh when toggling columns
+    * FIX: disable checkbox button in non-checkboxable layouts
 
     Mobile:
     * FIX: Fixed logtime filter settings in all mobile views
